--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@ html {
 }
 
 body {
-  color: white;
+  /* color: white; */
   overflow-x: hidden;
   height: 100%;
   color: rgb(var(--foreground-rgb));
