--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  cursor: none;
+  /* cursor: none; */
   overflow-x: hidden;
   height: 100%;
   color: rgb(var(--foreground-rgb));
