--- a/app/globals.css
+++ b/app/globals.css
@@ -20,20 +20,23 @@
   padding: 0;
   box-sizing: border-box;
 }
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 html,
 body {
   margin: 0;
   height: 100%;
   -webkit-overflow-scrolling: touch;
-  font-family: "Signika Negative", sans-serif, Arial;
+  /* font-family: "Signika Negative", sans-serif, Arial; */
+  /* font-family: "Lucida Console", "Courier New", monospace; */
+  font-family: "Courier Prime", monospace;
   /* overflow-x: hidden; */
 }
 
 body {
   cursor: none;
-
   color: rgb(var(--foreground-rgb));
+  font-family: "Courier Prime", monospace;
   background: linear-gradient(
       to bottom,
       transparent,
@@ -42,8 +45,437 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+#stars {
+  width: 1px;
+  height: 1px;
+  background: transparent;
+  box-shadow:
+    211px 1332px #fff,
+    1643px 1235px #fff,
+    105px 713px #fff,
+    364px 1178px #fff,
+    137px 1311px #fff,
+    223px 766px #fff,
+    327px 12px #fff,
+    1203px 666px #fff,
+    193px 1404px #fff,
+    1670px 863px #fff,
+    441px 1688px #fff,
+    1158px 1371px #fff,
+    1857px 405px #fff,
+    944px 191px #fff,
+    214px 1348px #fff,
+    812px 1878px #fff,
+    505px 637px #fff,
+    773px 384px #fff,
+    1664px 1612px #fff,
+    776px 1453px #fff,
+    1372px 213px #fff,
+    1274px 1688px #fff,
+    819px 1554px #fff,
+    606px 783px #fff,
+    83px 1866px #fff,
+    1999px 135px #fff,
+    1391px 1030px #fff,
+    884px 1306px #fff,
+    1593px 1725px #fff,
+    1348px 1605px #fff,
+    1415px 1179px #fff,
+    453px 122px #fff,
+    1949px 932px #fff,
+    643px 1787px #fff,
+    193px 1490px #fff,
+    30px 1452px #fff,
+    438px 889px #fff,
+    1426px 1435px #fff,
+    699px 1656px #fff,
+    181px 1110px #fff,
+    646px 244px #fff,
+    487px 48px #fff,
+    1059px 1124px #fff,
+    775px 1956px #fff,
+    1092px 1119px #fff,
+    1011px 584px #fff,
+    1174px 374px #fff,
+    1293px 501px #fff,
+    771px 1132px #fff,
+    1010px 1713px #fff,
+    831px 36px #fff,
+    495px 1512px #fff,
+    888px 1996px #fff,
+    1113px 926px #fff,
+    1901px 885px #fff,
+    122px 617px #fff,
+    924px 1763px #fff,
+    165px 1801px #fff,
+    348px 1869px #fff,
+    845px 162px #fff;
+  animation: animStar 50s linear infinite;
+}
+#stars:after {
+  content: " ";
+  position: absolute;
+  top: 2000px;
+  width: 1px;
+  height: 1px;
+  background: transparent;
+  box-shadow:
+    211px 1332px #fff,
+    1643px 1235px #fff,
+    105px 713px #fff,
+    364px 1178px #fff,
+    137px 1311px #fff,
+    223px 766px #fff,
+    327px 12px #fff,
+    1203px 666px #fff,
+    193px 1404px #fff,
+    1670px 863px #fff,
+    441px 1688px #fff,
+    1158px 1371px #fff,
+    1857px 405px #fff,
+    944px 191px #fff,
+    214px 1348px #fff,
+    812px 1878px #fff,
+    505px 637px #fff,
+    773px 384px #fff,
+    1664px 1612px #fff,
+    776px 1453px #fff,
+    1372px 213px #fff,
+    1274px 1688px #fff,
+    819px 1554px #fff,
+    606px 783px #fff,
+    83px 1866px #fff,
+    1999px 135px #fff,
+    1391px 1030px #fff,
+    884px 1306px #fff,
+    1593px 1725px #fff,
+    1348px 1605px #fff,
+    1415px 1179px #fff,
+    453px 122px #fff,
+    1949px 932px #fff,
+    643px 1787px #fff,
+    193px 1490px #fff,
+    30px 1452px #fff,
+    438px 889px #fff,
+    1426px 1435px #fff,
+    699px 1656px #fff,
+    181px 1110px #fff,
+    646px 244px #fff,
+    487px 48px #fff,
+    1059px 1124px #fff,
+    775px 1956px #fff,
+    1092px 1119px #fff,
+    1011px 584px #fff,
+    1174px 374px #fff,
+    1293px 501px #fff,
+    771px 1132px #fff,
+    1010px 1713px #fff,
+    831px 36px #fff,
+    495px 1512px #fff,
+    888px 1996px #fff,
+    1113px 926px #fff,
+    1901px 885px #fff,
+    122px 617px #fff,
+    924px 1763px #fff,
+    165px 1801px #fff,
+    348px 1869px #fff,
+    845px 162px #fff;
+}
+
+#stars2 {
+  width: 2px;
+  height: 2px;
+  background: transparent;
+  box-shadow:
+    1350px 931px #fff,
+    263px 1346px #fff,
+    185px 459px #fff,
+    1036px 1257px #fff,
+    211px 409px #fff,
+    650px 390px #fff,
+    169px 1680px #fff,
+    380px 1924px #fff,
+    795px 794px #fff,
+    1286px 1404px #fff,
+    1701px 1753px #fff,
+    3px 1499px #fff,
+    738px 1624px #fff,
+    762px 1221px #fff,
+    1683px 1003px #fff,
+    288px 1970px #fff,
+    1678px 1402px #fff,
+    1678px 1717px #fff,
+    31px 1134px #fff,
+    1213px 1282px #fff,
+    1968px 1644px #fff,
+    510px 98px #fff,
+    999px 1937px #fff,
+    421px 467px #fff,
+    144px 1613px #fff,
+    1612px 682px #fff,
+    15px 1333px #fff,
+    1610px 1137px #fff,
+    281px 1117px #fff,
+    1343px 1273px #fff,
+    1493px 799px #fff,
+    1395px 796px #fff,
+    1109px 534px #fff,
+    1717px 1794px #fff,
+    1136px 1864px #fff,
+    1244px 1135px #fff,
+    584px 953px #fff,
+    785px 1756px #fff,
+    585px 756px #fff,
+    1089px 673px #fff,
+    618px 297px #fff,
+    1638px 360px #fff,
+    1254px 396px #fff,
+    602px 611px #fff,
+    805px 457px #fff,
+    1885px 682px #fff,
+    1012px 304px #fff,
+    1985px 1274px #fff,
+    1021px 959px #fff,
+    543px 1369px #fff,
+    1040px 1688px #fff,
+    1050px 1003px #fff,
+    1209px 373px #fff,
+    663px 1827px #fff,
+    1520px 1709px #fff,
+    1887px 1773px #fff,
+    1971px 323px #fff,
+    1074px 1128px #fff,
+    1247px 267px #fff,
+    878px 203px #fff;
+  animation: animStar 100s linear infinite;
+}
+#stars2:after {
+  content: " ";
+  position: absolute;
+  top: 2000px;
+  width: 2px;
+  height: 2px;
+  background: transparent;
+  box-shadow:
+    1350px 931px #fff,
+    263px 1346px #fff,
+    185px 459px #fff,
+    1036px 1257px #fff,
+    211px 409px #fff,
+    650px 390px #fff,
+    169px 1680px #fff,
+    380px 1924px #fff,
+    795px 794px #fff,
+    1286px 1404px #fff,
+    1701px 1753px #fff,
+    3px 1499px #fff,
+    738px 1624px #fff,
+    762px 1221px #fff,
+    1683px 1003px #fff,
+    288px 1970px #fff,
+    1678px 1402px #fff,
+    1678px 1717px #fff,
+    31px 1134px #fff,
+    1213px 1282px #fff,
+    1968px 1644px #fff,
+    510px 98px #fff,
+    999px 1937px #fff,
+    421px 467px #fff,
+    144px 1613px #fff,
+    1612px 682px #fff,
+    15px 1333px #fff,
+    1610px 1137px #fff,
+    281px 1117px #fff,
+    1343px 1273px #fff,
+    1493px 799px #fff,
+    1395px 796px #fff,
+    1109px 534px #fff,
+    1717px 1794px #fff,
+    1136px 1864px #fff,
+    1244px 1135px #fff,
+    584px 953px #fff,
+    785px 1756px #fff,
+    585px 756px #fff,
+    1089px 673px #fff,
+    618px 297px #fff,
+    1638px 360px #fff,
+    1254px 396px #fff,
+    602px 611px #fff,
+    805px 457px #fff,
+    1885px 682px #fff,
+    1012px 304px #fff,
+    1985px 1274px #fff,
+    1021px 959px #fff,
+    543px 1369px #fff,
+    1040px 1688px #fff,
+    1050px 1003px #fff,
+    1209px 373px #fff,
+    663px 1827px #fff,
+    1520px 1709px #fff,
+    1887px 1773px #fff,
+    1971px 323px #fff,
+    1074px 1128px #fff,
+    1247px 267px #fff,
+    878px 203px #fff;
+}
+
+#stars3 {
+  width: 3px;
+  height: 3px;
+  background: transparent;
+  box-shadow:
+    327px 859px #fff,
+    799px 1041px #fff,
+    245px 997px #fff,
+    1064px 1706px #fff,
+    637px 1196px #fff,
+    52px 1898px #fff,
+    1049px 1712px #fff,
+    708px 533px #fff,
+    540px 1805px #fff,
+    1339px 1382px #fff,
+    272px 456px #fff,
+    1459px 1440px #fff,
+    134px 1192px #fff,
+    837px 820px #fff,
+    1247px 1183px #fff,
+    938px 1258px #fff,
+    1944px 328px #fff,
+    809px 923px #fff,
+    723px 73px #fff,
+    323px 1726px #fff,
+    500px 86px #fff,
+    279px 72px #fff,
+    1330px 1891px #fff,
+    1410px 41px #fff,
+    770px 73px #fff,
+    173px 538px #fff,
+    544px 1861px #fff,
+    749px 107px #fff,
+    1574px 1354px #fff,
+    181px 667px #fff,
+    598px 102px #fff,
+    905px 51px #fff,
+    927px 510px #fff,
+    1016px 1931px #fff,
+    959px 946px #fff,
+    1052px 887px #fff,
+    693px 36px #fff,
+    1072px 1746px #fff,
+    1418px 1444px #fff,
+    1353px 789px #fff,
+    880px 932px #fff,
+    1898px 146px #fff,
+    1765px 1111px #fff,
+    1824px 684px #fff,
+    438px 1751px #fff,
+    1271px 967px #fff,
+    1458px 197px #fff,
+    764px 452px #fff,
+    562px 929px #fff,
+    79px 2px #fff,
+    1574px 1462px #fff,
+    443px 795px #fff,
+    1483px 1461px #fff,
+    1944px 1279px #fff,
+    1228px 365px #fff,
+    425px 1547px #fff,
+    31px 1017px #fff,
+    890px 914px #fff,
+    1978px 1858px #fff,
+    486px 225px #fff;
+  animation: animStar 150s linear infinite;
+}
+#stars3:after {
+  content: " ";
+  position: absolute;
+  top: 2000px;
+  width: 3px;
+  height: 3px;
+  background: transparent;
+  box-shadow:
+    327px 859px #fff,
+    799px 1041px #fff,
+    245px 997px #fff,
+    1064px 1706px #fff,
+    637px 1196px #fff,
+    52px 1898px #fff,
+    1049px 1712px #fff,
+    708px 533px #fff,
+    540px 1805px #fff,
+    1339px 1382px #fff,
+    272px 456px #fff,
+    1459px 1440px #fff,
+    134px 1192px #fff,
+    837px 820px #fff,
+    1247px 1183px #fff,
+    938px 1258px #fff,
+    1944px 328px #fff,
+    809px 923px #fff,
+    723px 73px #fff,
+    323px 1726px #fff,
+    500px 86px #fff,
+    279px 72px #fff,
+    1330px 1891px #fff,
+    1410px 41px #fff,
+    770px 73px #fff,
+    173px 538px #fff,
+    544px 1861px #fff,
+    749px 107px #fff,
+    1574px 1354px #fff,
+    181px 667px #fff,
+    598px 102px #fff,
+    905px 51px #fff,
+    927px 510px #fff,
+    1016px 1931px #fff,
+    959px 946px #fff,
+    1052px 887px #fff,
+    693px 36px #fff,
+    1072px 1746px #fff,
+    1418px 1444px #fff,
+    1353px 789px #fff,
+    880px 932px #fff,
+    1898px 146px #fff,
+    1765px 1111px #fff,
+    1824px 684px #fff,
+    438px 1751px #fff,
+    1271px 967px #fff,
+    1458px 197px #fff,
+    764px 452px #fff,
+    562px 929px #fff,
+    79px 2px #fff,
+    1574px 1462px #fff,
+    443px 795px #fff,
+    1483px 1461px #fff,
+    1944px 1279px #fff,
+    1228px 365px #fff,
+    425px 1547px #fff,
+    31px 1017px #fff,
+    890px 914px #fff,
+    1978px 1858px #fff,
+    486px 225px #fff;
+}
+
+@keyframes animStar {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-2000px);
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@keyframes animStar {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-2000px);
   }
 }
