update project into main page

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,7 @@ body {
 
 body {
   /* cursor: none; */
+  overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   font-family: "Courier Prime", monospace;
   background: rgb(var(--background));
